--- a/index.html
+++ b/index.html
@@ -4,6 +4,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recursos Docentes</title>
+    <style>
+        body{
+            padding-left: 20px;
+            padding-right: 20px;
+            background: url(../PAG-WEB-RECURSOS-DOCENTES/img/herramientas-digitales.jpg) no-repeat center center fixed;
+            background-size: cover;
+            margin: 0%;
+            color: #fff;
+        }
+        #contenedor-logo {
+            text-align: center; /* Centra el contenido dentro del contenedor */
+            margin-bottom: 20px;
+            }
+
+        #logocafe {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%; /* Redondea las esquinas */
+            display: inline-block; /* Asegura que se alinee correctamente */
+        }
+        
+        h1 {
+            font-family: "Parisienne", cursive;
+            font-size: 4em;
+            text-align: center;
+            color: darkgoldenrod;
+            margin-bottom: 5px;
+        }
+
+        h2{
+            font-family: "Pacifico";
+            color: #ffe4c4;
+        }
+
+        #eslogan {
+            font-family: "Caveat", cursive;
+            font-style: italic;
+            text-align: center;
+            font-size: 2em;
+            color: cornsilk;
+            border: 2px solid cornsilk;
+            width: 40%;
+            margin: 0 auto;
+            padding: 10px;
+        }
+
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+            margin: 10px 0;
+        }
+
+        ul li {
+            color: white;
+            margin: 10px 0;
+        }
+
+        ul li a {
+            font-family: "Pacifico", cursive;
+            font-size: 1.5em;
+            color: white;
+            text-decoration: none;
+        }
+
+        ul li a:hover {
+            font-weight: bold;
+        }
+
+        ul li a:active {
+            color: darkgoldenrod;
+        }
+
+        .texto-normal {
+            font-family: "Satisfy", cursive;
+            font-size: 1.2em;
+            color: #ffe4c4;
+            text-align: justify;
+            line-height: 2;
+            padding: 30px;
+        }
+    </style>
 </head>
 <body>
     
