--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
         body{
             padding-left: 20px;
             padding-right: 20px;
-            background: url(../PAG-WEB-RECURSOS-DOCENTES/img/herramientas-digitales.jpg) no-repeat center center fixed;
+            background: url(../PAG-WEB-RECURSOS-DOCENTES/img/fondo.jpg) no-repeat center center fixed;
             background-size: cover;
             margin: 0%;
-            color: #fff;
         }
+
         #contenedor-logo {
             text-align: center; /* Centra el contenido dentro del contenedor */
             margin-bottom: 20px;
             }
 
-        #logocafe {
+        #logoordenador {
             width: 200px;
             height: 200px;
-            border-radius: 50%; /* Redondea las esquinas */
+            border-radius: 30%; /* Redondea las esquinas */
             display: inline-block; /* Asegura que se alinee correctamente */
         }
         
@@ -29,7 +29,7 @@
             font-family: "Parisienne", cursive;
             font-size: 4em;
             text-align: center;
-            color: darkgoldenrod;
+            color: goldenrod;
             margin-bottom: 5px;
         }
 
@@ -43,8 +43,8 @@
             font-style: italic;
             text-align: center;
             font-size: 2em;
-            color: cornsilk;
-            border: 2px solid cornsilk;
+            color: rgb(209, 98, 135);
+            border: 3px solid beige;
             width: 40%;
             margin: 0 auto;
             padding: 10px;
@@ -52,19 +52,19 @@
 
         ul {
             list-style-type: disc;
-            padding-left: 20px;
+            padding-left: 100px;
             margin: 10px 0;
         }
 
         ul li {
-            color: white;
+            color: burlywood;
             margin: 10px 0;
         }
 
         ul li a {
             font-family: "Pacifico", cursive;
             font-size: 1.5em;
-            color: white;
+            color: burlywood;
             text-decoration: none;
         }
 
@@ -73,13 +73,13 @@
         }
 
         ul li a:active {
-            color: darkgoldenrod;
+            color: burlywood;
         }
 
         .texto-normal {
             font-family: "Satisfy", cursive;
             font-size: 1.2em;
-            color: #ffe4c4;
+            color: rgb(209, 98, 135);
             text-align: justify;
             line-height: 2;
             padding: 30px;
@@ -98,7 +98,7 @@
     </ul>
 
     <div id="contenedor-logo">
-    <img id="logocafe" src="img/logo-ordenador.jpg" alt="Logo del ordenador">
+    <img id="logoordenador" src="img/logo-ordenador.jpg" alt="Logo del ordenador">
     </div>
 
     <h2>Quienes somos</h2>
