--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body{
             padding-left: 20px;
             padding-right: 20px;
-            background: url(../PAG-WEB-RECURSOS-DOCENTES/img/fondo.jpg) no-repeat center center fixed;
+            background: url(img/fondo.jpg) no-repeat center center fixed;
             background-size: cover;
             margin: 0%;
         }
