--- a/tecnologias.html
+++ b/tecnologias.html
@@ -23,7 +23,7 @@
       display: flex; 
       justify-content: space-around; 
       align-items: center; /* Centra los elementos verticalmente */
-      padding: 2%; 
+      padding: 1%; 
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
@@ -35,16 +35,20 @@
       display: flex; 
     }
 
+    nav ul li {
+      margin: 0 15px;
+    }
 
     nav a {
       color: white;
       text-decoration: none;
-      border-radius: 5px; /* Bordes redondeados */
-      transition: width 2s;
+      padding: 10px 15px; 
+      border-radius: 5px; 
+      transition: background-color 0.3s ease;
     }
 
     nav a:hover {
-      background-color: #3e8e41; /* Verde más oscuro al pasar el ratón */
+      background-color: #3e8e41; 
     }
 
     .titulo{
