--- a/tecnologias.html
+++ b/tecnologias.html
@@ -126,21 +126,21 @@
     <div id="contenedor">
 
         <article class="icono">
-            <a id="enlace" href="">
+            <a id="enlace" href="https://kahoot.com/es/kahoot-quiz-games/">
                 <img src="img/kahoot.png" alt="Kahoot">
                 <p>Kahoot</p>
             </a>
         </article>
 
         <article class="icono" >
-            <a id="enlace" href="">
+            <a id="enlace" href="https://www.scratchjr.org/">
                 <img src="img/scratchJr.png" alt="">
                 <p>ScrathJr</p>
             </a>
         </article>
 
         <article class="icono">
-            <a id="enlace" href="https://accounts.google.com/InteractiveLogin/signinchooser?continue=https%3A%2F%2Fclassroom.google.com%2F&emr=1&followup=https%3A%2F%2Fclassroom.google.com%2F&passive=1209600&service=classroom&ifkv=AVdkyDnqophbwqjek0yHXQXT0NBOPYu5r-RDEdZ8PfYFf7IOB1jUZX5O36d_saCSTQYcohE5ryy6gw&ddm=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">
+            <a id="enlace" href="https://edu.google.com/intl/ALL_es/workspace-for-education/products/classroom/">
                 <img src="img/classroom.png" alt="">
                 <p>Classroom</p>
             </a>    
