--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         }
 
         .logo {
-            width: 150px;  /* Ajusta el tamaño según necesites */
-            height: 150px; /* Asegura que sea un círculo */
+            width: 150px;  
+            height: 150px; 
             border-radius: 50%; /* Hace que la imagen sea redonda */
             object-fit: cover; /* Ajusta la imagen para que se recorte bien en el círculo */
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Opcional: añade sombra */
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
         }
 
         .texto-normal {
