--- a/tecnologias.html
+++ b/tecnologias.html
@@ -115,9 +115,8 @@
   <nav>
     <ul>
       <li><a href="index.html">Principal</a></li>
-      <li><a href="recursos.html">Recursos para el profesorado</a></li>
       <li><a href="tecnologias.html">Tecnologías y herramientas</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="formulario.html">Contacto</a></li>
   </ul>
   </nav>
   
