--- a/formulario.html
+++ b/formulario.html
@@ -128,7 +128,7 @@
             </label>
             <label>
                 Correo Electrónico:
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
             </label>
 
             <label>
